
[TestRawDataBatchCable - 1]
scopedb.Schema{
    &scopedb.FieldSchema{Name:"ts", Type:"timestamp"},
    &scopedb.FieldSchema{Name:"v", Type:"any"},
}
---

[TestRawDataBatchCable - 2]
[][]scopedb.Value{
    {
        time.Date(1969, time.December, 31, 23, 59, 59, 999998976, time.UTC),
        "\"scopedb\"",
    },
    {
        time.Date(1970, time.January, 1, 0, 0, 0, 1024, time.UTC),
        "42.1",
    },
}
---

[TestArrowBatchCable - 1]
scopedb.Schema{
    &scopedb.FieldSchema{Name:"a", Type:"int"},
    &scopedb.FieldSchema{Name:"v", Type:"any"},
}
---

[TestArrowBatchCable - 2]
[record:
  schema:
  fields: 2
    - a: type=int64, nullable
    - v: type=large_utf8, nullable
  rows: 2
  col[0][a]: [1 2]
  col[1][v]: ["{\"int\":1}" "{\"int\":2}"]
]
---
